--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,9 +1,9 @@
 <app-navbar></app-navbar>
 
-<main class="main-content" style="padding: 2rem;">
   <router-outlet></router-outlet>
-</main>
 
 <app-footer></app-footer>
 
-<app-chat-widget></app-chat-widget>
+@if (authService.isUserLoggedIn()) {
+  <app-chat-widget></app-chat-widget>
+}
