--- a/frontend/src/app/features/qa/pages/question-list-page/question-list-page.component.html
+++ b/frontend/src/app/features/qa/pages/question-list-page/question-list-page.component.html
@@ -1,10 +1,10 @@
 <div class="page-container">
   <nz-page-header [nzTitle]="moduleName()" nzSubtitle="Browse questions or ask your own">
     <nz-page-header-extra>
-      <a [routerLink]="['/qa/ask']" [queryParams]="{ module: moduleId() }" nz-button nzType="primary" class="btn-accent">
+      <button (click)="handleAskQuestionClick(modalFooter)" nz-button nzType="primary" class="btn-accent">
         <span nz-icon nzType="plus"></span>
         Ask Question
-      </a>
+      </button>
     </nz-page-header-extra>
   </nz-page-header>
 
@@ -26,3 +26,9 @@
     </div>
   </div>
 </div>
+
+<ng-template #modalFooter>
+  <button nz-button (click)="handleCancel()">Cancel</button>
+  <button nz-button (click)="handleRegister()">Register</button>
+  <button nz-button nzType="primary" (click)="handleLogin()">Log In</button>
+</ng-template>
